@@ -4,22 +4,40 @@
  <execution>
   <ghostscript />
   <prototype>gs -q -dBATCH -dSAFER -dNOPAUSE -sProcessColorModel=DeviceGray -dBitsPerSample=1 -sDEVICE=ijs %A %Z -sIjsServer=ijs_server_epsonepl -dIjsUseOutputFD -sDeviceManufacturer=Epson -sDeviceModel=EPL5800L -sIjsParams=&quot;%B&quot; -sOutputFile=- -</prototype>
+  <ppdentry>
+   *DefaultResolution: 1200x600dpi
+   *Resolution 1200x600dpi/1200x600 dpi: &quot;&quot;
+  </ppdentry>
+  <margins>
+   <general>
+    <unit>pt</unit>
+    <relative />
+    <left>12</left>
+    <right>12</right>
+    <top>12</top>
+    <bottom>12</bottom>
+   </general>
+  </margins>
  </execution>
  <comments>
   <en>
 
-    This printer doesn't understand PCL 5e, PCL 6,
-    PostScript and so it doesn't work with standard drivers;
-    it can only be driven through a proprietary language.
+    This printer doesn&apos;t understand PCL 5e, PCL 6, PostScript and
+    so it doesn&apos;t work with standard drivers; it can only be
+    driven through a proprietary language.
 
-    An independent driver was developed in the
-    &lt;a href=&quot;http://sourceforge.net/projects/epsonepl/&quot;&gt;
-    epsonepl&lt;/a&gt;project.&lt;p&gt;
+    An independent driver was developed in the &lt;a
+    href=&quot;http://sourceforge.net/projects/epsonepl/&quot;&gt;
+    epsonepl&lt;/a&gt; project.&lt;p&gt;
 
-    The driver is IJS based, GNU ghostscript 6.53 onwards or AFPL 
-    ghostscript 7.04 onwards is required.
+    The driver is IJS based, GNU ghostscript 6.53 onwards or AFPL
+    ghostscript 7.04 onwards is required.&lt;p&gt;
 
-    This project is not endorsed by nor affiliated with Epson.
+    This project is not endorsed by nor affiliated with
+    Epson.&lt;p&gt;
+
+    This driver is only tested on the parallel port but will probably
+    work on USB without any changes.&lt;p&gt;
 
   </en>
  </comments>
